--- a/src/TaskBox.css
+++ b/src/TaskBox.css
@@ -1,36 +1,42 @@
 .card-text{
-    padding-top: 20px;
-    padding-bottom: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
 .box{
-    margin: 3px;
+  margin: 3px;
 }
-
 .completed-box{
-    background-color: #afe86d;
+  background-color: #afe86d;
 }
 
 .incompleted-box{
-    background-color: white;
+  background-color: white;
 }
 
 .trash-icon{
-    margin: 4px;
-    color: red;
-    position: absolute;
-    right: 15px;
-    bottom: 20px;
+  margin: 4px;
+  color: red;
+  position: absolute;
+  right: 15px;
+  bottom: 20px;
 }
- .check-icon{
-    color: blue;
-    position: absolute;
-    left: 15px;
-    bottom: 20px;
+
+.check-icon{
+  color: blue;
+  position: absolute;
+  left: 15px;
+  bottom: 20px;
  }
 
- .undo-icon{
-    color: green;
-    position: absolute;
-    left: 15px;
-    bottom: 20px;
- }
+.undo-icon{
+  color: green;
+  position: absolute;
+  left: 15px;
+  bottom: 20px;
+}
+
+#title-container{
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
